@@ -10,6 +10,7 @@ import com.lwx.rpc.util.ReflectUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.net.InetSocketAddress;
 import java.util.Set;
 
@@ -27,6 +28,7 @@ public abstract class AbstractRpcServer implements RpcServer{
         Class<?> startClass;
         try{
             startClass = Class.forName(mainClassName);
+            //寻找注解@ServiceScan
             if(!startClass.isAnnotationPresent(ServiceScan.class)){
                 logger.error("the class is lack of @ServiceScan annotation!");
                 throw new RpcException(RpcError.SERVICE_SCAN_PACKAGE_NOT_FOUND);
@@ -35,22 +37,30 @@ public abstract class AbstractRpcServer implements RpcServer{
             logger.error("unknown error");
             throw new RpcException(RpcError.UNKNOWN_ERROR);
         }
+
+        //该注解的value属性，默认为空
         String basePackage = startClass.getAnnotation(ServiceScan.class).value();
         if("".equals(basePackage)){
+            //获取包名
             basePackage = mainClassName.substring(0,mainClassName.lastIndexOf("."));
         }
+        //找到包内的所有类
         Set<Class<?>> classSet = ReflectUtil.getClasses(basePackage);
+
         for(Class<?> clazz:classSet){
+            //寻找@Service注解
             if(clazz.isAnnotationPresent(Service.class)){
                 String serviceName = clazz.getAnnotation(Service.class).name();
                 Object obj;
                 try{
-                    obj = clazz.newInstance();
-                }catch(InstantiationException|IllegalAccessException e){
+                    //此处有改动
+                    obj = clazz.getDeclaredConstructor().newInstance();
+                }catch(InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e){
                     logger.error("error when build {}",clazz);
                     continue;
                 }
                 if("".equals(serviceName)){
+                    //注册每个方法
                     Class<?>[] interfaces = clazz.getInterfaces();
                     for(Class<?> oneInterface:interfaces){
                         publishService(obj,oneInterface.getCanonicalName());
@@ -64,6 +74,7 @@ public abstract class AbstractRpcServer implements RpcServer{
 
     @Override
     public <T> void publishService(T service,String serviceName){
+        //保存到本地注册表，同时发布至Nacos
         serviceProvider.addServiceProvider(service,serviceName);
         serviceRegistry.register(serviceName,new InetSocketAddress(host,port));
     }
